# playground

./: .eslintrc.js  .gitignore  .golangci.yml  .prettierignore  AGENTS.md  README.md  Taskfile.yml  be-careful  dprint.json  mise.toml  package-lock.json  package.json  print_pdf.html
.github/workflows/: autorelease.yml
.jules/: janitor.md  sentinel.md
ARQUIVO/customizacao-pendrive/: autorun.inf
ARQUIVO/scripts-backup-arch/: borg_backup.sh
CHALLENGES/rinha-backend-2024.1/: README.md
CHALLENGES/uri/: 1012.c
EXERCICIOS/202401-rinha-backend/: README.md  docker-compose.yaml
EXERCICIOS/202501-rinha-backend/: Dockerfile  nginx.conf
EXERCICIOS/20250929-latex_utfpr/: .gitignore  mise.toml
EXERCICIOS/FACUL/: fsi1.py  velha_graphviz.py
EXERCICIOS/rinha-backend-2025.1/: docker-compose.yaml
EXERCICIOS/uri/: 1004.c  1006.c  1007.c  1014.c  1014.go
FACUL/automatos/: out.dot
FACUL/fsi/: ex6lista4.py
MODELOS/latex_utfpr_beamer/: bib.bib  macros.tex  main.tex
MODELOS/latex_utfpr_sbc/: README.md  sbc-template.tex
PROJETOS/20180712-useacabeca-c/: enum_base2.c  envsetup.sh  matrix.c  matrix.go  pessoa.go  rssgossip.txt
PROJETOS/20180712-useacabeca-c/blasteroids/: .gitignore  CMakeLists.txt  adm  asteroid.c  asteroid.h  blast.h  draw_utils.c  draw_utils.h  event.c  event.h  log_utils.c  log_utils.h  main.c  main.c.old  main.h  signal_utils.c  signal_utils.h  spaceship.c  spaceship.h
PROJETOS/20180712-useacabeca-c/blasteroids/include/: blasteroids.h
PROJETOS/20180712-useacabeca-c/blasteroids/include/blasteroids/: aspawner.h  asteroid.h  blasteroids_types.h  bullet.h  collision.h  config.h  context.h  event.h  main.h  pos_fixer.h  spaceship.h  text.h  utils.h
PROJETOS/20180712-useacabeca-c/blasteroids/include/blasteroids/utils/: draw.h  log.h  signal.h
PROJETOS/20180712-useacabeca-c/blasteroids/src/: aspawner.c  asteroid.c  bullet.c  collision.c  context.c  event.c  pos_fixer.c  spaceship.c  text.c
PROJETOS/20180712-useacabeca-c/blasteroids/src/utils/: draw.c  log.c  signal.c
PROJETOS/20190224-luaboard/: actions.lua  anotacoes.lua  go.mod  main.go
PROJETOS/20190225-lua-iterutils/: iterutils.lua  iterutils_test.lua
PROJETOS/20200428-golang-lpm/: README.md  go.mod  go.sum  test_output.txt
PROJETOS/20200917-projeto-hell-usb-portabilization/: hell.cmd  hellexec.ahk
PROJETOS/20201114-auxilio-emergencial-pipeline/: README.md  sql2db  sqlify  zipcat
PROJETOS/20230906-cmake-latex-example/: CMakeLists.txt  README.md  main.tex
ahk/: fastkill.ahk  mediaremap.ahk
assembly/: build
auxilio_pipeline/: README.md  dbify_all_zips  sqlify.awk
basic_java_jersey/: README.md  pom.xml  shell.nix
blender/: bloco de vidro.blend  motorola-perlin-noise.blend  procedural_donut.blend  render
cgi/: echo
challenges/rinha-backend-2025.1/: .gitignore  pyproject.toml
challenges/rinha-backend-2025.1/rinha/: __main__.py
elixir/: bumblebee_stt.livemd  docker-compose.livebook.yaml  guard_teste.exs  teste-kino.livemd  teste.exs  teste.livemd  webserver.exs
facul/: divisao_ip.py  hanoi_dfa.py  hanoi_graphviz.py
github/: commit_api
nix/: netdrv.nix
pandas_draw/: process
piton/: ascii_chord.py  basic-ml  discord-rich-presence.py  extract_container.py  flet-base.py  gpu-info.py  imgdistance.py  ml-fashion-mnist  ml-rps  nix-flask.py  opencv-hist-inv.py  parse-arc.py  pyautogui-search-test.py  pyrun.py  random-seed-bruteforce  selenium-visible.py
poc/: tlauncher_server_check
poc_c/: block_on_parameter.c  build
projetos/20250402-zed-vibecode/: pyproject.toml
python_cgi/: launch
rust/basic_telegram_bot/: Cargo.toml
rust/basic_telegram_bot/src/: main.rs
shell/: dump-env-from-proc
talks/: 2023 Conexão Livre.odp
tools/: p0  remnote_editlater_normalizer.py
typst/: README.md  demo.typ  input.typ
uri/: 1002.c  1003.c  1005.c  1008.c  1011.c  1013.c  1013.go
(+1057 files in other folders)
