[project]
name = "test"
version = "0.0.0"
description = "Test project"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["fastapi>=0.95.0", "uvicorn>=0.21.0", "sqlalchemy"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.0.1"]

[project.scripts]
main = "main:main"

[tool.uv]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]
